@@ -8,6 +8,9 @@ Revision history for Test-BrewBuild
           (closes #244)
         - fix issue in brew_info tests where perlbrew added non-conforming
           versions in 'perlbrew available'
+        - in BC::installed() we now croak if the proper params not sent in
+        - if only one Perl is installed, we now check to ensure we have the
+          perl version header in the results, if not, we add it (fixes #241)
 
 2.20    2018-04-16
         - modified layout of LCD output to be more conducive of numerous runs
